# ArchMap

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
archmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
archmap_python/: cli.py
archmap_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
archmap_python/adapters/: python_adapter.py
archmap_python/analysis/: cycles.py  health.py  impact.py  metrics.py  top_risk.py
archmap_python/core/: model.py
archmap_python/export/: graphviz.py  json_export.py
soft_archmap/: cli.py  requirements.txt
soft_archmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
soft_archmap/adapters/: python_adapter.py
soft_archmap/analysis/: cycles.py  health.py  impact.py  metrics.py  risk.py  top_risk.py  visualize.py
soft_archmap/core/: graph.py
soft_archmap/engine/: analysis_engine.py  insight_builder.py
soft_archmap/export/: graphviz.py  json_export.py
soft_archmap/report/: html_report.py
