[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soft-archmap"          # must be lowercase, use '-' not '_'
version = "0.1.1"
description = "Python tool to analyze architecture and dependencies in Python projects."
readme = "README.md"             # include README on PyPI
requires-python = ">=3.10"
authors = [
    { name = "Excited Nuclei Tech Labs", email = "excitednuclei.techlabs@gmail.com" }
]
license = { file = "LICENSE.txt" }   # or use SPDX identifier if open source, e.g., "MIT"
keywords = ["architecture", "dependency", "python", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License"
]
dependencies = [
    "graphviz>=0.21",
    "networkx>=3.6.1",
    "pyvis>=0.3.2",
    "rich>=15.0.0",
    "requests>=2.33.1"
]

[project.optional-dependencies]
dev = [
    "asttokens==3.0.1",
    "build==1.5.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "docutils==0.22.4",
    "executing==2.2.1",
    "id==1.6.1",
    "idna==3.13",
    "ipykernel==7.2.0",
    "ipython==9.13.0",
    "ipython_pygments_lexers==1.1.1",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.1.2",
    "jaraco.functools==4.4.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jsonpickle==4.1.1",
    "jupyter_client==8.8.0",
    "jupyter_core==5.9.1",
    "keyring==25.7.0",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "more-itertools==11.0.2",
    "nest-asyncio==1.6.0",
    "nh3==0.3.5",
    "packaging==26.1",
    "parso==0.8.6",
    "platformdirs==4.9.6",
    "prompt_toolkit==3.0.52",
    "psutil==7.2.2",
    "pure_eval==0.2.3",
    "Pygments==2.20.0",
    "pyproject_hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pywin32-ctypes==0.2.3",
    "pyzmq==27.1.0",
    "readme_renderer==44.0",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "twine==6.2.0",
    "urllib3==2.6.3",
    "wcwidth==0.6.0"
]

[project.scripts]
soft-archmap = "soft_archmap.cli:main"

[project.urls]
Homepage = "https://github.com/EN-Tech-Labs/ArchMap"
Repository = "https://github.com/EN-Tech-Labs/ArchMap"
Documentation = "https://github.com/EN-Tech-Labs/ArchMap"